# parallelmachine

./: CMakeLists.txt  TIMER.cpp  TIMER.h  main.cpp  parallelm.hpp  readme.md
